force-app/main/default/objects/Tag_Anything__c/Tag_Anything__c.object-meta.xml
<CustomObject>
    <label>Tag</label>
    <nameField>
        <label>Label</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Tags</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>