force-app/main/default/objects/Tag_Anything__c/fields/Icon__c.field-meta.xml
<CustomField>
    <fullName>Icon__c</fullName>
    <label>Icon</label>
    <length>50</length>
    <type>Text</type>
</CustomField>