force-app/main/default/objects/Tag_Anything__c/fields/Icon_Variant__c.field-meta.xml
<CustomField>
    <fullName>Icon_Variant__c</fullName>
    <label>Icon Variant</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>inverse</fullName>
            </value>
            <value>
                <fullName>success</fullName>
            </value>
            <value>
                <fullName>warning</fullName>
            </value>
            <value>
                <fullName>error</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>