force-app/main/default/objects/Tag_Anything__c/fields/Internal_Value__c.field-meta.xml
<CustomField>
    <fullName>Internal_Value__c</fullName>
    <label>Internal Value</label>
    <length>6</length>
    <required>true</required>
    <type>Text</type>
    <unique>true</unique>
</CustomField>