force-app/main/default/objects/Tag_Anything__c/fields/Label_Color__c.field-meta.xml
<CustomField>
    <fullName>Label_Color__c</fullName>
    <defaultValue>&#39;#000000&#39;</defaultValue>
    <label>Label Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>