force-app/main/default/objects/Tag_Anything__c/fields/Tag_Color__c.field-meta.xml
<CustomField>
    <fullName>Tag_Color__c</fullName>
    <defaultValue>&#39;#EAEAEA&#39;</defaultValue>
    <label>Tag Color</label>
    <length>7</length>
    <type>Text</type>
</CustomField>