force-app/main/default/objects/Tag_Anything__c/validationRules/WithoutSpecialChars.validationRule-meta.xml
<ValidationRule>
    <fullName>WithoutSpecialChars</fullName>
    <active>true</active>
    <errorConditionFormula>NOT(REGEX(Internal_Value__c, &#39;^[A-Za-z0-9]{1,6}$&#39;))</errorConditionFormula>
    <errorDisplayField>Internal_Value__c</errorDisplayField>
    <errorMessage>The Internal Value field can only contain alphanumeric characters.</errorMessage>
</ValidationRule>