force-app/main/default/objects/Tag_Anything__c/listViews/All.listView-meta.xml
<ListView>
    <fullName>All</fullName>
    <columns>NAME</columns>
    <columns>Internal_Value__c</columns>
    <columns>Tag_Color__c</columns>
    <columns>Label_Color__c</columns>
    <columns>Icon__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <label>All</label>
</ListView>