force-app/main/default/objects/Tag_Anything__c/listViews/All_Inactive.listView-meta.xml
<ListView>
    <fullName>All_Inactive</fullName>
    <columns>NAME</columns>
    <columns>Internal_Value__c</columns>
    <columns>Tag_Color__c</columns>
    <columns>Label_Color__c</columns>
    <columns>Icon__c</columns>
    <columns>Is_Active__c</columns>
    <filterScope>Everything</filterScope>
    <filters>
        <field>Is_Active__c</field>
        <operation>equals</operation>
        <value>0</value>
    </filters>
    <label>All Inactive</label>
</ListView>